frontend/src/components/forms/ProductModal.css
.modal-overlay {
    position: absolute;
    background-color: var(--background);
    left: 50%;
    top: 50%;
    transform: translateX(-50%) translateY(-50%);
    box-shadow: 0px 8px 16px 4px rgba(0,0,0,0.1);
    padding: 2rem;
    border-radius: 16px;

    width: 50rem;

    z-index: 2;
}

.modal-overlay .modal {
    display: flex;
    flex-direction: column;
    gap: 3rem;
}

.modal-overlay .modal header {
    padding: 0;
    display: flex;
    gap: 10rem;
}

.modal-overlay .modal header h2 {
    font-size: 1.5rem;
    font-weight: 500;
    color: var(--text);
}

.modal-overlay .modal header button {
    font-size: 1rem;
    font-weight: 500;
    color: var(--text);

    border: none;
    background-color: transparent;
    cursor: pointer;
}

.modal-overlay .modal form {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.modal-overlay .modal form input {
    margin-bottom: 2rem;
    height: 3rem;
    border-radius: 16px;
    width: 100%;
    background-color: var(--background-hover);
    border: none;
    padding-left: 1rem;

    font-size: 1rem;
    color: var(--text);
}

.modal-overlay .modal form input::placeholder {
  font-size: 1rem;
  color: var(--text);
  opacity: 0.5;
}

.modal-overlay .modal form input:focus {
  outline: 1px solid rgba(0, 0, 0, 0.3);
}

.modal-overlay .modal form span {
    margin-bottom: 0.5rem;
    width: 100%;
}

.modal-overlay .modal form select {
    background-color: var(--background-hover);
    outline: none;
    border: none;
    width: 100%;
    height: 3rem;
    margin-bottom: 2rem;
    padding-left: 1rem;
    font-size: 1rem;
    color: var(--text);
    border-radius: 16px;
}

.modal-overlay .modal form select:focus {
  outline: 1px solid rgba(0, 0, 0, 0.3);
}

.modal-overlay .modal form p {
    height: 2rem;
    color: var(--error);
    font-size: 1rem;
    font-weight: 400;
    margin-bottom: 1rem;
}


.modal-overlay .modal form button {
    height: 3rem;
    border-radius: 32px;
    border: none;
    font-size: 1rem;
    font-weight: 600;
    width: 75%;
    color: var(--background);
    background-color: var(--secondary);

    transition: all 0.2 ease-in-out;
}

.modal-overlay .modal form button:active {
    transform: scale(0.95);
    filter: brightness(0.9);
}

